# ChangeLog for dev-lang/lua
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-lang/lua/ChangeLog,v 1.148 2010/06/19 17:04:05 mabi Exp $

*lua-5.1.4-r6 (19 Jun 2010)

  19 Jun 2010; Matti Bickel <mabi@gentoo.org>
  +files/5.1.4/05_all_string_format.upstream.patch, -lua-5.1.4-r1.ebuild,
  -lua-5.1.4-r3.ebuild, +files/5.1.4/06_all_io_read.upstream.patch,
  -lua-5.1.4-r2.ebuild, -lua-5.1.4-r5.ebuild, +lua-5.1.4-r6.ebuild:
  add two upstream patches, remove old ebuilds

  10 Apr 2010; Raúl Porcel <armin76@gentoo.org> lua-5.1.4-r4.ebuild:
  ia64/s390/sh stable

  05 Mar 2010; Matti Bickel <mabi@gentoo.org> lua-5.1.4-r5.ebuild:
  fix bug #306869

*lua-5.1.4-r5 (23 Feb 2010)

  23 Feb 2010; <mabi@gentoo.org>
  +files/5.1.4/03_all_debug_getfenv.upstream.patch, +lua-5.1.4-r5.ebuild,
  +files/5.1.4/04_all_gc_performance.upstream.patch:
  add upstream patches

  10 Jan 2010; nixnut <nixnut@gentoo.org> lua-5.1.4-r4.ebuild:
  ppc stable #295134

  01 Jan 2010; Tobias Klausmann <klausman@gentoo.org> lua-5.1.4-r4.ebuild:
  Stable on alpha, bug #295698

  08 Dec 2009; Brent Baude <ranger@gentoo.org> lua-5.1.4-r4.ebuild:
  Marking lua-5.1.4-r4 ppc64 for bug 295134

  07 Dec 2009; Markus Meier <maekke@gentoo.org> lua-5.1.4-r4.ebuild:
  arm stable, bug #295134

  07 Dec 2009; Tiago Cunha <tcunha@gentoo.org> lua-5.1.4-r4.ebuild:
  stable sparc, bug 295134

  07 Dec 2009; Markus Meier <maekke@gentoo.org> lua-5.1.4-r4.ebuild:
  amd64/x86 stable, bug #295134

  04 Dec 2009; Jeroen Roovers <jer@gentoo.org> lua-5.1.4-r4.ebuild:
  Stable for HPPA (bug #295134).

*lua-5.1.4-r4 (26 Nov 2009)

  26 Nov 2009; Robin H. Johnson <robbat2@gentoo.org> +lua-5.1.4-r4.ebuild:
  jer's earlier fix missed some of the pkgconfig calls for the INSTALL_LIB
  and libdir settings. Fixup so I can do Lua SWIG bindings.

*lua-5.1.4-r3 (24 Nov 2009)

  24 Nov 2009; Jeroen Roovers <jer@gentoo.org> +lua-5.1.4-r3.ebuild: