@@ -30,6 +30,7 @@ AUX lua-5.1.4-test.patch 340 RMD160 5ab1fdfaf1c18d26c66096ade8944223c21ce9ca SHA
 DIST lua-5.1.4.tar.gz 216679 RMD160 c867c8364295d3e4fb4e4d8ebb27fa2b2312cdef SHA1 2b11c8e60306efb7f0734b747588f57995493db7 SHA256 b038e225eaf2a5b57c9bcc35cd13aa8c6c8288ef493d52970c9545074098af3a
 EBUILD lua-5.1.4-r4.ebuild 3824 RMD160 bcd935224161c280b288bad0564b75dc68cc15e0 SHA1 c1792b3d63e6662318fcea0f130b9a4c4976eeec SHA256 8f3308a28a6c884bbb2e88a110fcd288d4ec1b488e5c3feffeb179915dffbfbd
 EBUILD lua-5.1.4-r6.ebuild 3862 RMD160 17099a8e88a5960bcd1f03df3b9a1d8cf2557a99 SHA1 44062e63873cc4a8e8d9e5651fc732982859fa9c SHA256 6797b325d89cbae2850c9d5751461029b87a920dd9218d8a919a16cf5ada89e3
+EBUILD lua-5.1.4-r7.ebuild 3914 RMD160 b2a9ea870a8d7f25d06f0168af6531a49c953db3 SHA1 cfd7e99d9fd85d35e718bbf463b26263333d2da2 SHA256 69073c03f0488d5460253f6c72977b9982f7b5885c47c53c3684a677a87f846b
 EBUILD lua-5.1.4.ebuild 3361 RMD160 3d1700ed30eaac8127ea5631c2910ad2d7aecde8 SHA1 94b68ef195445fdb8dba995ad54d415ed233cd2b SHA256 34b7e7bfb8f99818bcdf38f38236148356dc8e893d1a7f2a20c9e7d5d48f5eb9
-MISC ChangeLog 22004 RMD160 fb1e1c7cacdd407f546ec524d95c5fac50d33b62 SHA1 68b90d00f0d78851c4223438b4d947c4e128f698 SHA256 b85145c28018e982dc775240f738fc46b50fa197f9ed3e71a0ac652ea88da8d3
-MISC metadata.xml 339 RMD160 0d536a77658ffb6d8bccff7183a5bf4722d0a82d SHA1 f5bd1085f69b6e9d81e42cd711a7846ccb267e31 SHA256 6b3bedf093395def984b71f7c74ce59742c5df6592ad50f1b96c8a2499f27c8b
+MISC ChangeLog 22262 RMD160 1e70632b25727d05b265fa41baef2fb548bcd5ab SHA1 b99aa8b0af9f7864514bccd648caf1a774d1d472 SHA256 3d9f45915c28fd3ef5eae702218031ad5effc113209abe31cfbc61bdf610d8f1
+MISC metadata.xml 439 RMD160 5d8e3b28284216f713c21ffe0114be43c9bb07d9 SHA1 82954cc398760601c4b7c3e39168b7cd353f5591 SHA256 cffce989780dbdfbc97af8183d3dab20ab0d94496cbaca81451649ecd6123e86
